fix spacing

--- a/src/renderer/styles/components/_dismiss-button.scss
+++ b/src/renderer/styles/components/_dismiss-button.scss
@@ -2,10 +2,14 @@
   @include text-button;
 
   &__icon {
+
     &[name='close'] { // specificity needed to override NC-UI
       height: 0.5rem;
-      margin-right: 0.5rem;
       width: 0.5rem;
     }
+  }
+
+  &--inline {
+    margin-right: 0.5rem;
   }
 }
